--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "private": true,
   "main": "main.js",
   "dependencies": {
-    "pg": "^8.8.0",
-    "ws": "^8.8.1"
+    "pg": "8.8.0",
+    "pino": "8.6.1",
+    "pino-pretty": "9.1.1",
+    "ws": "8.8.1"
   }
 }
